--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "esModuleInterop": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "strict": true
+    "strict": true,
+    "strictNullChecks": true
   }
 }
