--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Thuta Sann",
   "license": "ISC",
   "dependencies": {
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "concurrently": "^8.2.0"
